--- a/linkfest.html
+++ b/linkfest.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Not Wrong Studios</title>
+    <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.ico"/>
     <meta name="description" content="Not Wrong Studios">
     <meta name="Not Wrong Studios" content="Grand Rapids, MI">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -106,27 +107,27 @@
         <div class="row" id="lyricsList">
             <div id="lyrics" class="border col-md-6 col-xs-6 text-center" style="margin-top:5%; font-family: 'Droid Sans', sans-serif; font-size: 2vw; border-right: 1px dashed rgba(139, 133, 137, 1);">
                 <p>I hate the fact that assholes</p>
-                <p>run the whole planet</p>
-                <p>i’ve fought em for generations </p>
-                <p>since I was a cave man</p>
+                <p>Run the whole planet</p>
+                <p>I’ve fought em for generations </p>
+                <p>Since I was a cave man</p>
                 <a id="spanish_inquisition">
                     <p>Spanish inquisition</p>
                 </a>
-                <p>modern day arraignment</p>
+                <p>Modern day arraignment</p>
                 <a id="scorched_earth" <p>Scorched Earth</p></a>
                 <p>Scorched Sky</p>
-                <p>bring back the rain danc</p>
-                <p>Outerspace k-pa</p>
-                <p>wikileaks diplomat</p>
+                <p>Bring back the rain dance</p>
+                <p>Outerspace k-pac</p>
+                <p>Wikileaks diplomat</p>
                 <p>9/11 epitaphs</p>
-                <p>drug war underclas</p>
-                <p>class war redefined</p>
-                <p>define war</p>
-                <p>war is peace</p>
-                <p>newspeak</p>
-                <p>speak your peace</p>
-                <p>peace of min</p>
-                <p>is hard to reach</p>
+                <p>Drug war underclass</p>
+                <p>Class war redefined</p>
+                <p>Define war</p>
+                <p>War is peace</p>
+                <p>Newspeak</p>
+                <p>Speak your peace</p>
+                <p>Peace of mind</p>
+                <p>Is hard to reach</p>
             </div>
             <div class="col-xs-3 col-xs-offset-1 sidebar-outer">
                 <div id="infospace" class="border col-md-4 col-xs-3 top-buffer text-center fixed" style="font-family: 'Droid Sans', sans-serif; font-size: 2vw;">
