--- a/ophelia.html
+++ b/ophelia.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
 
   <title>Ophelia</title>
+  <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.ico"/>
   <meta name="description" content="The Ophelia Crystal">
   <meta name="author" content="Liam Considine">
 
@@ -19,8 +20,8 @@
 </head>
 
 <body>
-<div>
-  <div style="color:white; margin-left:1vh;"><h2>OPHELIA</h2></div>
+<div style="font-family: 'Inter', sans-serif; font-weight: 800;">
+  <div style="color:white; margin-left:1vh;"><h1>OPHELIA</h1></div>
   <img src="public/Lattice_33.svg" class="lattice img-responsive">
     <!-- <object class="lattice" data="public/Lattice_33.svg" type="image/svg+xml"></object> -->
     <video muted autoplay loop poster="poster.jpg" id="bgvid">
@@ -29,7 +30,7 @@
     <button type="button" class="btn btn-secondary" style="bottom: 5vh; position: absolute; right: 2vh;" id="vidpause">Stop Video</button>
 </div>
 <div>
-  <audio controls autoplay style="position: fixed; width: 100%; bottom: 0;">
+  <audio allow="autoplay" controls autoplay style="height: 3em; position: fixed; width: 100%; bottom: 0;">
     <source src="audio/DSP.mp3" type="audio/mpeg">
   </audio>
 </div>
