--- a/breath.html
+++ b/breath.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
 
   <title>breathing halftone</title>
+  <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.ico"/>
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
