--- a/hamster_crush.html
+++ b/hamster_crush.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
 
   <title>The HTML5 Herald</title>
+  <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.ico"/>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
