--- a/satellite.html
+++ b/satellite.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <title>Not Wrong Studios</title>
+    <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.ico"/>
     <meta name="description" content="Not Wrong Studios">
     <meta name="Not Wrong Studios" content="Grand Rapids, MI">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
