--- a/spaceship.html
+++ b/spaceship.html
@@ -4,6 +4,7 @@
  
 <html lang="en"> 
 <head>
+	<link rel="shortcut icon" type="image/jpg" href="imgs/favicon.ico"/>
 </head> 
 <div id="anim4">
 <svg version="1.1" id="rocketico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
