--- a/trianglescroll.html
+++ b/trianglescroll.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <title>Not Wrong Studios</title>
     <meta name="description" content="Not Wrong Studios">
+    <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.ico"/>
     <meta name="Not Wrong Studios" content="Grand Rapids, MI">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans|Open+Sans' rel='stylesheet' type='text/css'>
