--- a/ophelia.html
+++ b/ophelia.html
@@ -22,9 +22,9 @@
 <body>
 <div style="font-family: 'Inter', sans-serif; font-weight: 800;">
   <div style="color:white; margin-left:1vh;"><h1>OPHELIA</h1></div>
-  <img src="public/Lattice_33.svg" class="lattice img-responsive">
-    <!-- <object class="lattice" data="public/Lattice_33.svg" type="image/svg+xml"></object> -->
-    <video muted autoplay loop poster="poster.jpg" id="bgvid">
+  <!-- <img src="public/Lattice_33.svg" class="lattice img-responsive"> -->
+    <object class="lattice" data="public/Lattice_33.svg" type="image/svg+xml"></object>
+    <video muted autoplay loop id="bgvid">
         <source src="video/crystal.mp4" type="video/mp4">
     </video>
     <button type="button" class="btn btn-secondary" style="bottom: 5vh; position: absolute; right: 2vh;" id="vidpause">Stop Video</button>
