--- a/ophelia.html
+++ b/ophelia.html
@@ -16,18 +16,26 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-
+    <!--CDN link for  TweenMax-->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenMax.min.js"></script>
+    <!--CDN links for TweenLite, CSSPlugin, and EasePack-->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/plugins/CSSPlugin.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/easing/EasePack.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenLite.min.js"></script>
 </head>
 
 <body>
 <div style="font-family: 'Inter', sans-serif; font-weight: 800;">
   <div style="color:white; margin-left:1vh;"><h1>OPHELIA</h1></div>
   <!-- <img src="public/Lattice_33.svg" class="lattice img-responsive"> -->
-    <object class="lattice" data="public/Lattice_33.svg" type="image/svg+xml"></object>
-    <video muted autoplay loop id="bgvid">
+    <object id="lattice1" class="lattice" data="public/Lattice_33.svg" type="image/svg+xml"></object>
+    <object id="lattice2" class="lattice" data="public/Lattice_33.svg" type="image/svg+xml"></object>
+    <object id="lattice3" class="lattice" data="public/Lattice_33.svg" type="image/svg+xml"></object>
+
+    <video muted autoplay loop seamless id="bgvid">
         <source src="video/crystal.mp4" type="video/mp4">
     </video>
-    <button type="button" class="btn btn-secondary" style="bottom: 5vh; position: absolute; right: 2vh;" id="vidpause">Stop Video</button>
+    <button type="button" class="btn btn-secondary" style="bottom: 5vh; position: fixed; right: 2vh;" id="vidpause">Stop Video</button>
 </div>
 <div>
   <audio allow="autoplay" controls autoplay style="height: 3em; position: fixed; width: 100%; bottom: 0;">
@@ -36,6 +44,22 @@
 </div>
 </body>
   <script type="text/javascript">
+        var lattice1 = document.getElementById("lattice1");
+        var lattice2 = document.getElementById("lattice2");
+        var lattice3 = document.getElementById("lattice3");
+
+        TweenMax.to(lattice1, 12, {rotation: "100%", delay: 2.5});
+        TweenMax.to(lattice2, 12, {rotation: "-100%", delay: 2.5});
+        TweenMax.to(lattice1, 10, {opacity: "0.22", delay: 3.5});
+        TweenMax.to(lattice2, 10, {opacity: "0.22", delay: 3.5});
+        TweenMax.to(lattice3, 10, {opacity: "0.66", delay: 3.5});
+        TweenMax.to(lattice3, 10, {width: "95%", height: "95%", delay: 10, yoyo:true, repeat: -1})
+
+        TweenMax.to(lattice1, 12, {rotation: "-100%", delay: 20, yoyo: true, repeat: -1});
+        TweenMax.to(lattice2, 12, {rotation: "100%", delay: 20, yoyo: true, repeat: -1});
+
+        TweenMax.to(lattice3, 10)
+
         var vid = document.getElementById("bgvid"),
         pauseButton = document.getElementById("vidpause");
         function vidFade() {
