--- a/satellite.html
+++ b/satellite.html
@@ -8,9 +8,9 @@
     <link rel="shortcut icon" type="image/jpg" href="imgs/favicon.ico"/>
     <meta name="description" content="Not Wrong Studios">
     <meta name="Not Wrong Studios" content="Grand Rapids, MI">
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/custom_styles.css">
 </head>
 
