--- a/spaceship.html
+++ b/spaceship.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 	 
-       "http://www.w3.org/TR/html4/loose.dtd">
+       "https://www.w3.org/TR/html4/loose.dtd">
  
 <html lang="en"> 
 <head>
 	<link rel="shortcut icon" type="image/jpg" href="imgs/favicon.ico"/>
 </head> 
 <div id="anim4">
-<svg version="1.1" id="rocketico" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+<svg version="1.1" id="rocketico" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="612px" height="611.5px" viewBox="0 0 612 611.5" enable-background="new 0 0 612 611.5" xml:space="preserve">
 <path id="circleship" fill="#FFFFFF" d="M305.998,15.188
 	c160.22,0,290.563,130.346,290.563,290.565c0,160.211-130.347,290.558-290.563,290.558c-160.213,0-290.56-130.347-290.56-290.56
@@ -94,8 +94,8 @@
 </svg>
 </div>
 <!--CDN link for the latest TweenMax-->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.0/plugins/CSSPlugin.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.15.0/TweenLite.min.js"></script>
 <script>
